syntax = "proto3";
import "DTO/work_day.proto";
import "google/protobuf/timestamp.proto";
import "DTO/trace_data.proto";

option csharp_namespace = "Proto.Requests.WorkDays";

message GetAllWorkDaysRequestProto {}

message GetSelectedWorkDayRequestProto {
  string work_day_id = 1;
  TraceDataProto traceData = 2;
}

message GetWorkDayByDateRequestProto {
  google.protobuf.Timestamp date = 1;
  TraceDataProto traceData = 2;
}

message IsWorkDayExistingRequestProto {
  google.protobuf.Timestamp date = 1;
  TraceDataProto traceData = 2;
}

message WorkDayListProto {
  repeated WorkDayProto work_days = 1;
}

message WorkDayExistsResponseProto {
  bool exists = 1;
}

service WorkDayRequestService {
  rpc GetAllWorkDays(GetAllWorkDaysRequestProto) returns (WorkDayListProto);
  rpc GetSelectedWorkDay(GetSelectedWorkDayRequestProto) returns (WorkDayProto);
  rpc GetWorkDayByDate(GetWorkDayByDateRequestProto) returns (WorkDayProto);
  rpc IsWorkDayExisting(IsWorkDayExistingRequestProto) returns (WorkDayExistsResponseProto);
}
