syntax = "proto3";

option csharp_namespace = "Proto.Notifications.WorkDay";

service NotificationService {
  rpc SendWorkDayCreated(WorkDayCreatedNotification) returns (NotificationResponse);
}

service WorkDayNotificationService {
  rpc SubscribeWorkDayNotifications(SubscribeRequest) returns (stream WorkDayNotification);
}

message WorkDayNotification {
  oneof notification {
    WorkDayCreatedNotification workDayCreated = 1;
  }
}

message WorkDayCreatedNotification {
  string workDayId = 1;
  string date = 2; // ISO 8601 string
}

message NotificationResponse {
  bool success = 1;
}

message SubscribeRequest {}
